# pyroar

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/pyroar/: __init__.py  general.py  pyroar.py  pyroar_test.py
src/pyroar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyroar/.ipynb_checkpoints/: test_second_version-checkpoint.ipynb
src/pyroar/___toBeRemoved/: manipulator.py
src/pyroar/eda/.ipynb_checkpoints/: df_eda_Jupyter-checkpoint.ipynb
src/pyroar/encoding/: __init__.py  encoding.py
src/pyroar/imputation/: __init__.py  imputation.py
src/pyroar/outlier_treatment/: __init__.py
src/pyroar/scaling/: __init__.py  scaling.py
src/pyroar/transformation/: __init__.py  transformation.py
tests/: aux_functions_test.py
