[metadata]
name = pyroar
version = 0.0.2
author = Group C
author_email = ali.alhammad@student.ie.edu
description = This package performs transformation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IE-Group-C/pyroar
project_urls =
    Bug Tracker = https://github.com/IE-Group-C/pyroar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src